Implemented ban system, so ban restrictions respect
